# ad-r1m-ros2

./: .dockerignore  .gitignore  CONTRIBUTING.md  README.md  __PACKAGE.html  __links.html  __standards.html  _toctree.html  conf.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  repos.vcs  rosdep.yaml  search.html  searchindex.js  software-guide.html  tags.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/workflows/: _docker_build_test_push.yml  debian.yml  docker.yml  docker_build_multiplatform.yml  docker_test_build_push.yml  generate_doc.yml  pr_closed.yml
_sources/: software-guide.rst.txt
_sources/explanation/: software-system-architecture.rst.txt
_sources/reference/: index.rst.txt
_sources/tutorial/: index.rst.txt  system-setup.rst.txt
ad_r1m/: CMakeLists.txt  package.xml  rosdoc2.yaml
ad_r1m/doc/: conf.py  index.rst  requirements.txt  software-guide.rst
ad_r1m/doc/explanation/: software-system-architecture.rst
ad_r1m/doc/how-to/: index.rst
ad_r1m/doc/how-to/jetson/: ad-r1m-cuvslam-setup.rst  map-building-for-nav2.rst
ad_r1m/doc/tutorial/: getting-started.rst  index.rst  ros2-getting-started.rst
ad_r1m_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml  requirements.txt
ad_r1m_bringup/config/: crsf.yaml
ad_r1m_bringup/config/canopen/: adrd5161.eds  bus.yml
ad_r1m_bringup/launch/: bms.launch.py  bringup.launch.py  imu.launch.py  teleop_crsf.launch.py
ad_r1m_bringup/scripts/adrd_bms/: __init__.py  adrd_bms_node.py
ad_r1m_bringup/scripts/crsf/: crsf_node.py  teleop_keyboard.py
ad_r1m_bringup/urdf/: ad_r1m_canopen.urdf.xacro
ad_r1m_control/: CHANGELOG.rst  CMakeLists.txt  package.xml
ad_r1m_control/config/: controllers.yaml  controllers_no_ekf.yaml  ekf.yaml  twist_mux.yaml
ad_r1m_control/launch/: drive_control.launch.py  sensor_fusion.launch.py
ad_r1m_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
ad_r1m_description/rviz/: main.rviz  main_sim.rviz  ns_main.rviz
ad_r1m_description/urdf/: _imu_adis16470.xacro  _lidar.xacro  _tof_adtf3175d.xacro  ad_r1m_base.urdf.xacro
ad_r1m_examples/: CHANGELOG.rst  CMakeLists.txt  Dockerfile  README.md  entrypoint.sh  fastrtps-udp-only.xml  package.xml  pixi.toml
ad_r1m_examples/launch/: client_server.launch.py  demo_run.launch.py
ad_r1m_examples/scripts/: velocity_control.py  waypoint_follower.py
ad_r1m_examples/scripts/commander/: demo_run.py  elevator_server.py  waypoint_follower.py
ad_r1m_examples/scripts/lift/: lift_node.py
ad_r1m_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
ad_r1m_gazebo/config/: gaz_ros2_ctl_use_sim.yaml
ad_r1m_gazebo/launch/: launch_sim.launch.py  teleopt.launch.py
ad_r1m_gazebo/urdf/: ad_r1m_sim.urdf.xacro
ad_r1m_navigation/: CHANGELOG.rst  CMakeLists.txt  package.xml
ad_r1m_navigation/config/: mapper_params_online_async.yaml  nav2_params.yaml  nav2_params_minimal.yaml  nav2_params_sim.yaml  navigation_params.yaml  navigation_params_dwb.yaml  navigation_params_vpersuit.yaml  rtabmap_params.yaml
ad_r1m_navigation/launch/: localization_launch.py  map_server_launch.py  navigation_launch.py  online_async_launch.py  rtabmap_rgbd_launch.py
ad_r1m_navigation/maps/: empty300.yaml  map3.pgm  map3.xcf
ad_r1m_navigation/scripts/: image_encoding_republisher.py  image_flip_vertical.py  image_preprocess.py
ad_r1m_perception_aditof/: CHANGELOG.rst  CMakeLists.txt  package.xml
ad_r1m_perception_aditof/config/: depth_to_laser_params.yaml
ad_r1m_perception_aditof/launch/: aditof_bringup.launch.py  depthimage_to_laserscan.launch.py
ad_r1m_perception_cuvslam/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
ad_r1m_perception_cuvslam/config/: cuvslam_single_realsense.yaml  vslam_multi_realsense.yaml  vslam_single_realsense.yaml
ad_r1m_perception_cuvslam/launch/: cuvslam_multirealsense.launch.py  cuvslam_multirealsense_sync.launch.py  robot_realsense_sim.launch.py  rsp_realsense.launch.py  vslam_single_realsense.launch.py
ad_r1m_perception_cuvslam/nvidia_docker_extension/: Dockerfile.visualslam
ad_r1m_perception_cuvslam/nvidia_docker_extension/entrypoint_additions/: avahi_dbus_setup.sh
ad_r1m_perception_cuvslam/src/: realsense_image_sync.cpp
ad_r1m_perception_cuvslam/urdf/: _d435.gazebo.xacro  _d435.urdf.xacro  _d435i.urdf.xacro  _d435i_imu.gazebo.xacro  _d435i_imu_modules.urdf.xacro  ad_r1m_realsense.urdf.xacro  ardagv_all_realsense.urdf.xacro  realsense_calibration.urdf.xacro  single_realsense_calibration.urdf.xacro
ad_r1m_pointcloud_to_occupacygrid/: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml
ad_r1m_pointcloud_to_occupacygrid/doc/: default.rviz
ad_r1m_pointcloud_to_occupacygrid/include/pointcloud_to_grid/: pointcloud_to_grid_core.hpp
ad_r1m_pointcloud_to_occupacygrid/launch/: build_occupancy_grid.launch.py  rviz.launch.py
ad_r1m_pointcloud_to_occupacygrid/src/: pointcloud_to_grid_node.cpp
ad_r1m_pointcloud_to_occupancygrid/launch/: build_occupancy_grid.launch.py  rviz.launch.py
ad_r1m_pointcloud_to_occupancygrid/src/: pointcloud_to_grid_node.cpp
ad_r1m_robot/: CMakeLists.txt  package.xml
ad_r1m_sim/: CMakeLists.txt  package.xml
ci/: build_doc.sh
docker/: Dockerfile  dockers.yml
docker/aditof/: adi_3dtof_adtf31xx-0002-Only-get-local-camera.diff  libaditof-0001-Workarounds-for-portenta.diff
explanation/: index.html  ros2-architecture.html  software-system-architecture.html
how-to/: index.html  troubleshooting.html  use-cases.html
how-to/build-from-scratch/: assemble-hardware.html  index.html  setup-rpi.html
how-to/jetson/: ad-r1m-and-nvidia-cuvslam.html  ad-r1m-cuvslam-setup.html  ad-r1m-jetson-orin-hardware-setup.html  ad-r1m-realsense-gazebo.html  agx-orin-setup.html  index.html  map-building-for-nav2.html  setup-isaac-ros-agx-orin.html  setup-isaac-ros-vslam.html  (+2 more)
packaging/: build_debian.sh
pull/1/: __PACKAGE.html  (+10 more)
reference/: index.html  specs.html
tutorial/: getting-started.html  index.html  manage-configurations.html  ros2-examples.html  ros2-getting-started.html  ros2-writing-your-own-nodes.html  system-setup.html
(+361 files in other folders)
