<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ad_r1m_gazebo</name>
  <version>0.1.0</version>
  <description>AD-R1M simulated robot in Gazebo Classic</description>
  <maintainer email="SDP_Enablement@analog.com">Analog Devices, Inc.</maintainer>
  <license>Apache-2.0</license>

  <author email="laurentiu.popa@analog.com">Laurentiu Popa</author>
  <author email="ioan.dragomir@analog.com">Ioan Dragomir</author>

  <!-- Build Tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- AD-R1M base packages -->
  <exec_depend>ad_r1m_description</exec_depend>
  <exec_depend>ad_r1m_control</exec_depend>

  <!-- Gazebo -->
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>

  <!-- Simulator UI -->
  <exec_depend>rviz2</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  
  <!-- Testing Dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
