<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ad_r1m_perception_aditof</name>
  <version>0.1.0</version>
  <description>AD-R1M default perception stack using an EVAL-ADTF3175D-NXZ</description>
  <maintainer email="SDP_Enablement@analog.com">Analog Devices, Inc.</maintainer>
  <license>Apache-2.0</license>

  <author email="ioan.dragomir@analog.com">Ioan Dragomir</author>

  <exec_depend>launch</exec_depend>
  <exec_depend>topic_tools</exec_depend>

  <depend>depthimage_to_laserscan</depend>
  
  <!-- Testing Dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
